# Clippers_assignment

./: Dockerfile  Dockerfile_DB  Dockerfile_Dashboard  README.md  create_tables.py  credentials.yaml  dashboard.py  database.py  ingest_data.py  main.py  pyproject.toml  queries.sql  requirements.txt
queries/: 2.a.sql  2.b.sql  3.a.sql  3.b.sql  3.c.sql  4.a.sql  4.b.sql  4.c.sql  4.d.sql
