[tool.poetry]
name = "clippers-assignment"
version = "0.1.0"
description = "NBA LA Clippers Take-home Challenge"
authors = ["Anzhe Meng <anzhemeng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.20"
altair = "^5.4.1"
pandas = "1.5.3"
plotly = "^5.24.1"
PyYAML = "^6.0.2"
SQLAlchemy = "^2.0.35"
streamlit = "^1.38.0"
streamlit-calendar = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
